secure-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-app
  namespace: secure-app
spec:
  ingressClassName: secure.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: secure-app
            port:
              number: 80
        path: /
        pathType: Prefix
